--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,28 +1,34 @@
-{% extends 'mailing/base.html' %}
-
+{% extends 'mailing/home.html' %}
+{% load my_tags %}
 {% block content %}
-<div class="col-12 mb-5">
-    <a class="btn btn-outline-primary" href="{% url 'blog:create' %}">Добавить статью</a>
-</div>
-{% for object in object_list %}
-<div class="col-md-4">
-    <div class="card mb-4 box-shadow">
-        <div class="card-body">
-            <p class="card-text">
-                {{ object | title }}
-            </p>
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <a href="{% url 'blog:view' object.pk %}"
-                       class="btn btn-sm btn-outline-secondary">Просмотр</a>
-                    <a href="{% url 'blog:update' object.pk %}" type="button"
-                       class="btn btn-sm btn-outline-secondary">Редактировать</a>
-                    <a href="{% url 'blog:delete' object.pk %}" type="button"
-                        class="btn btn-sm btn-outline-danger">Delete</a>
+<div class="album py-5 bg-body-tertiary">
+    <div class="container">
+        <div class="form-control text-center"> Блог </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+            {% for item in object_list %}
+
+            <div class="col">
+                <div class="card shadow-sm">
+                    {% if blog.image %}
+                        <img src="{{ blog.image | media_filter }}">
+                    {% endif %}
+                    <div class="card-body">
+                        <p class="card-text">Тема: {{ item.title }}</p>
+                        <p class="card-text">Статус: {{ item.body | slice:":100" }}</p>
+                        <p class="card-text">Тема: {{ item.views_count }}</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a class="btn btn-primary" href="{% url 'blog:blog_detail' item.pk %}" role="button">Посмотреть</a>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            {% endfor %}
         </div>
     </div>
 </div>
-{% endfor %}
 {% endblock %}
