--- a/static/css/album.css
+++ b/static/css/album.css
@@ -20,7 +20,9 @@
 }
 
 .jumbotron-heading {
-  font-weight: 300;
+  text-transform: uppercase;  /* делает текст заглавными буквами */
+  color: green;  /* устанавливает зеленый цвет текста */
+  font-weight: bold;  /* делает текст жирным */
 }
 
 .jumbotron .container {
@@ -37,3 +39,24 @@ footer p {
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.navbar-nav .nav-link {
+    font-size: 18px; /* Увеличиваем размер шрифта */
+    font-weight: bold; /* Делаем текст жирным */
+    padding: 10px 15px; /* Добавляем внутренние отступы */
+    color: #f8f9fa; /* Цвет текста */
+    transition: color 0.3s, background-color 0.3s; /* Эффекты при наведении */
+}
+
+.navbar-nav .nav-link:hover {
+    color: #343a40; /* Цвет текста при наведении */
+    background-color: #f8f9fa; /* Фон при наведении */
+    border-radius: 5px; /* Закругленные углы */
+}
+
+.navbar-nav .active > .nav-link {
+    color: #ffffff; /* Цвет активного элемента */
+    background-color: #007bff; /* Фон активного элемента */
+    border-radius: 5px; /* Закругленные углы */
+}
+
