--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,33 +1,29 @@
 {% extends 'mailing/home.html' %}
 {% load my_tags %}
 {% block content %}
+
+
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
-        <div class="form-control text-center"> Блог </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-            {% for item in object_list %}
-
             <div class="col">
                 <div class="card shadow-sm">
                     {% if blog.image %}
-                        <img src="{{ blog.image | media_filter }}">
+                        <img src="{{ blog.image | media_filter }}" class="card-img-top" alt="{{ blog.name }}">
                     {% endif %}
                     <div class="card-body">
-                        <p class="card-text">Тема: {{ item.title }}</p>
-                        <p class="card-text">Статус: {{ item.body | slice:":100" }}</p>
-                        <p class="card-text">Тема: {{ item.views_count }}</p>
+                        <p class="card-text">Название: {{ object.title }} </p>
+                        <p class="card-text">Содержание: {{ object.body }}</p>
+                        <p class="card-text">Просмотры: {{ object.views_count }}</p>
+                        <p class="card-text">Дата публикации: {{ object.updated_at }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'blog:blog_detail' item.pk %}" role="button">Посмотреть</a>
-
+                                <a class="btn btn-primary" href="{% url 'mailing:home' %}" role="button">Вернуться</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            {% endfor %}
         </div>
     </div>
 </div>
