--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -1,27 +1,39 @@
-{% extends "mailing/home.html" %}
+{% extends 'mailing/home.html' %}
+{% load my_tags %}
 
-<h1>Список рассылок</h1>
-<a href="{% url 'mailing:mailing_create' %}" class="btn btn-primary mb-3">Создать новую рассылку</a>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Дата</th>
-            <th>Статус</th>
-            <th>Сообщение</th>
-            <th>Действия</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for mailing in mailings %}
-        <tr>
-            <td>{{ mailing.date_of_first_dispatch }}</td>
-            <td>{{ mailing.get_status_display }}</td>
-            <td>{{ mailing.message_id }}</td>
-            <td>
-                <a href="{% url 'mailing:mailing_update' mailing.pk %}" class="btn btn-warning btn-sm">Изменить</a>
-                <a href="{% url 'mailing:mailing_delete' mailing.pk %}" class="btn btn-danger btn-sm">Удалить</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% block content %}
+<div class="container">
+    <h1 class="text-center my-4">Список рассылок</h1>
+    <a href="{% url 'mailing:mailing_create' %}" class="btn btn-message btn-sm">Создать новую рассылку</a>
+
+    {% if mailings %}
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Дата</th>
+                <th>Статус</th>
+                <th>Сообщение</th>
+                <th>Действия</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for mailing in mailings %}
+            <tr>
+                <td>{{ mailing.date_of_first_dispatch }}</td>
+                <td>{{ mailing.get_status_display }}</td>
+                <td>{{ mailing.message_id }}</td>
+                <td>
+                    <a href="{% url 'mailing:mailing_detail' mailing.pk %}" class="btn btn-transparent btn-sm">Посмотреть</a>
+                    <a href="{% url 'mailing:mailing_update' mailing.pk %}" class="btn btn-transparent btn-sm">Изменить</a>
+                    <a href="{% url 'mailing:mailing_delete' mailing.pk %}" class="btn btn-delete btn-sm">Удалить</a>
+                    
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <p class="text-center">Рассылок нет</p>
+    {% endif %}
+</div>
+{% endblock %}
