--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -9,8 +9,9 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-primary">Войти </button>
-                {# </p><a href="{% url 'users:change_password' %}" class="btn btn-link">Восстановить пароль</a></p> #}
+                <button type="submit" class="btn btn-primary">
+                    Зарегестрироваться
+                </button>
             </div>
         </div>
     </form>
