--- a/mailing/templates/includes/inc_menu.html
+++ b/mailing/templates/includes/inc_menu.html
@@ -1,25 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">    
-      
+  <div class="container">
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-        
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">  
+      <ul class="navbar-nav">
         <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
          <a class="nav-link" href="{% url 'mailing:home' %}">Главная</a>
         </li>
-        <li class="nav-item {% if request.resolver_match.url_name == 'mailing' %}">active{% endif %}">
+        <li class="nav-item {% if request.resolver_match.url_name == 'mailing' %}active{% endif %}">
          <a class="nav-link" href="{% url 'mailing:mailing_list' %}">Рассылки</a>
         </li>
-        <li class="nav-item {% if request.resolver_match.url_name == 'messages' %}">active{% endif %}">
+        <li class="nav-item {% if request.resolver_match.url_name == 'messages' %}active{% endif %}">
           <a class="nav-link" href="{% url 'mailing:message_list' %}">Сообщения</a>
         </li>
-        <li class="nav-item {% if request.resolver_match.url_name == 'client' %}">active{% endif %}">
+        <li class="nav-item {% if request.resolver_match.url_name == 'client' %}active{% endif %}">
           <a class="nav-link" href="{% url 'mailing:client_list' %}">Клиенты</a>
         </li>
-       
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <form action="{% url 'users:logout' %}" method="post" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-link btn btn-link text-white" style="padding: 0; border: none; background: none;">
+                        Выйти
+                    </button>
+                </form>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a href="{% url 'users:login' %}" class="nav-link text-white">Войти</a>
+                <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+            </li>
+        {% endif %}
       </ul>
     </div>
   </div>
