--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -4,8 +4,9 @@
 {% block content %}
 <div class="container">
     <h1 class="text-center my-4">Список рассылок</h1>
+    {% if user.is_authenticated %}
     <a href="{% url 'mailing:mailing_create' %}" class="btn btn-message btn-sm">Создать новую рассылку</a>
-
+    {% endif %}
     {% if mailings %}
     <table class="table table-bordered">
         <thead>
