--- a/mailing/templates/mailing/message_confirm_delete.html
+++ b/mailing/templates/mailing/message_confirm_delete.html
@@ -1,8 +1,8 @@
 {% extends "mailing/base.html" %}
 {% block content %}
 <div class="container">
-    <h1 class="text-center my-4">Удалить рассылку</h1>
-    <p class="text-center">Вы уверены, что хотите удалить рассылку "{{ object.name }}"?</p>
+    <h1 class="text-center my-4">Удалить сообщение</h1>
+    <p class="text-center">Вы уверены, что хотите удалить сообщение "{{ object.name }}"?</p>
     <form method="post">
         {% csrf_token %}
         <div class="text-center">
