--- a/mailing/templates/includes/inc_menu.html
+++ b/mailing/templates/includes/inc_menu.html
@@ -18,6 +18,9 @@
         <li class="nav-item {% if request.resolver_match.url_name == 'client' %}active{% endif %}">
           <a class="nav-link" href="{% url 'mailing:client_list' %}">Клиенты</a>
         </li>
+        <li class="nav-item {% if request.resolver_match.url_name == 'blog' %}active{% endif %}">
+          <a class="nav-link" href="{% url 'blog:list' %}">Блог</a>
+        </li>
         {% if user.is_authenticated %}
             <li class="nav-item">
                 <form action="{% url 'users:logout' %}" method="post" style="display: inline;">
