--- a/mailing/templates/mailing/mailing_form.html
+++ b/mailing/templates/mailing/mailing_form.html
@@ -1,17 +1,40 @@
 {% extends "mailing/base.html" %}
 
 {% block content %}
-<div class="container">    
-    <h1 class="text-center my-4">{% if object %}Редактировать рассылку{% else %}Создать рассылку{% endif %}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div class="text-center">
-            <button type="submit" class="btn btn-success">
-                {% if object %}Сохранить{% else %}Создать{% endif %}
-            </button>
-            <a href="{% url 'mailing:mailing_list' %}" class="btn btn-secondary">Отмена</a>        
+<div class="row mb-4">
+    <div class="col-md-12">
+        <div class="h-100 p-5 bg-body-tertiary rounded-3">
+            <h2>{% if object %}Редактировать рассылку{% else %}Добавить рассылку{% endif %}</h2>
+            <p>Создавайте сообщения и выбирайте клиентов для рассылки.</p>
+
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="button" id="select-all" class="btn btn-secondary mt-3">Выбрать всех</button>
+                <button type="button" id="deselect-all" class="btn btn-secondary mt-3">Сбросить выбор</button>
+
+                <button type="submit" class="btn btn-primary mt-3">
+                    {% if object %}Редактировать{% else %}Добавить рассылку{% endif %}
+                </button>
+            </form>
+
         </div>
-    </form>
+    </div>
 </div>
+
+<script>
+    document.getElementById('select-all').onclick = function() {
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(function(checkbox) {
+            checkbox.checked = true;
+        });
+    };
+
+    document.getElementById('deselect-all').onclick = function() {
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(function(checkbox) {
+            checkbox.checked = false;
+        });
+    };
+</script>
 {% endblock %}
