--- a/mailing/templates/mailing/message_list.html
+++ b/mailing/templates/mailing/message_list.html
@@ -12,27 +12,27 @@
     {% if object_list %}
     <div class="row row-cols-1 row-cols-md-2 g-3 justify-content-center">
         {% for message in object_list %}
-        {# if message.owner == user or user.is_superuser #}
         <div class="col">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">{{ message.title }}</h5>
+                    <h5 class="card-title">{{ message.topic }}</h5>
                     <p class="card-text">{{ message.body|slice:":100" }}</p>
                     <div class="d-flex justify-content-center">
                         <div class="btn-group">                            
-                            
                             {% if perms.mailing.change_message %}
                             <a class="btn btn-transparent btn-sm" href="{% url 'mailing:message_update' message.pk %}" role="button">Изменить</a>
                             {% endif %}
                             {% if perms.mailing.delete_message %}
-                            <a class="btn btn-delete btn-sm" {% if not object_list %} disabled {% endif %} href="{% url 'mailing:message_delete' message.pk %}" role="button">Удалить</a>
+                            <a class="btn btn-delete btn-sm" href="{% url 'mailing:message_delete' message.pk %}" role="button">Удалить</a>
+                            {% endif %}
+                            {% if perms.mailing.view_message %}
+                            <a class="btn btn-transparent btn-sm" href="{% url 'mailing:message_detail' message.pk %}" role="button">Просмотреть</a>
                             {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
         {% endfor %}
     </div>
     {% else %}
