--- a/mailing/templates/mailing/mailing_confirm_delete.html
+++ b/mailing/templates/mailing/mailing_confirm_delete.html
@@ -1,10 +1,14 @@
 {% extends "mailing/base.html" %}
 {% block content %}
-<h1>Удалить рассылку</h1>
-<p>Вы уверены, что хотите удалить рассылку "{{ object }}"?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Удалить</button>
-    <a href="{% url 'mailing:mailing_list' %}" class="btn btn-secondary">Отмена</a>
-</form>
+<div class="container">
+    <h1 class="text-center my-4">Удалить рассылку</h1>
+    <p class="text-center">Вы уверены, что хотите удалить рассылку "{{ object }}"?</p>
+    <form method="post">
+        {% csrf_token %}
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger">Удалить</button>
+            <a href="{% url 'mailing:mailing_list' %}" class="btn btn-secondary">Отмена</a>
+        </div>
+    </form>
+</div>
 {% endblock %}
